feat: change isJoin to identity
